daytrip foursquare integration

--- a/DayTripNJ.App/wwwroot/index.html
+++ b/DayTripNJ.App/wwwroot/index.html
@@ -18,7 +18,7 @@
 <div id="app" style="font-family:'Courier New';font-weight:bold;">
     <div class="center-align-background" style="width:50%; margin-left:auto; margin-right:auto;">
         <div class="form-outer" style="min-width: 250px; max-width: 500px; margin-left:auto; margin-right:auto">
-            <img src="/assets/icons/nj.png" style="padding-top:30%; border-radius:10px;display: block;margin-left: auto; margin-right: auto;" width="50%" height="auto" />
+            <img src="/assets/icons/DayTrip.png" style="padding-top:30%; border-radius:10px;display: block;margin-left: auto; margin-right: auto;" width="50%" height="auto" />
         </div>
     </div>
 </div>
